fix: border-radius for sections on mobile styles modified

--- a/public/styles/base/variables.css
+++ b/public/styles/base/variables.css
@@ -41,6 +41,7 @@
     --container-max-width: 1200px;
     --section-padding-sm: 1rem 0;
     --section-padding-lg: 4rem 0;
+    --radius-sm-mobile: 15px;
     --radius-sm: 8px;
     --radius-md: 30px;
     --radius-lg: 39px;
