--- a/public/styles/components/services.css
+++ b/public/styles/components/services.css
@@ -327,6 +327,12 @@
 
     @media only screen and (max-width: 430px) {
 
+        .hero-services-section {
+            border-bottom-right-radius: var(--radius-sm-mobile);
+            border-bottom-left-radius: var(--radius-sm-mobile);
+        }
+
+
         .renewals-services h1 {
             font-size: 58px !important;
             bottom: -5%;
@@ -341,6 +347,10 @@
         .about-services-section .services-diy,
         .about-services-section .services-handle {
             padding: 8px;
+        }
+
+        .about-services-section {
+            border-radius: var(--radius-sm-mobile);
         }
 
         .about-services-section h2 {
@@ -370,11 +380,11 @@
 
         .cta-services-section .container-fluid {
             padding: 1rem 0 1rem 0;
-
         }
 
         .cta-services-section .row {
             min-height: 330px;
+            padding: 0.5rem;
         }
 
         .cta-services-section h2 {
@@ -402,7 +412,7 @@
         }
 
         .cta-services-section h2 {
-            font-size: 24px;
+            font-size: 22px;
         }
 
         .cta-services-section p {
