--- a/public/styles/pages/home.css
+++ b/public/styles/pages/home.css
@@ -986,6 +986,8 @@
 
     .hero-section {
         padding: var(--section-padding-sm);
+        border-bottom-left-radius: var(--radius-sm-mobile);
+        border-bottom-right-radius: var(--radius-sm-mobile);
     }
 
     .hero-section .hero-text {
@@ -1020,6 +1022,10 @@
 
     .video-section h2 {
         font-size: 52px;
+    }
+
+    .differentiatior-section {
+        border-radius: var(--radius-sm-mobile);
     }
 
     .differentiatior-section .carousel .card {
